--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>
-								prepare-agent
-							</goal>
+							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
@@ -109,7 +107,6 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
-
 				</executions>
 			</plugin>
 		</plugins>
