--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enable=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 security.oauth2.client.scope=password
+
+security.jwt.signing-key=ZXUgc291IGFxdWVsZSBxdWUgc2FiZQ==
