adding cors config 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enable=true
 spring.h2.console.path=/h2-console
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.http=DEBUG
+spring.mvc.log-request-details=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
