--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-spring.datasource.url=jdbc:h2:mem:db
-spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.url=jdbc:h2:mem:db
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
+
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
+#spring.h2.console.enable=true
+#spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enable=true
-spring.h2.console.path=/h2-console
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.http=DEBUG
