Add migration with flyway refactor some class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 #spring.h2.console.enable=true
 #spring.h2.console.path=/h2-console
@@ -16,13 +16,20 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
+#Flyaway
+flyway.url=jdbc:postgresql://localhost:5432/
+flyway.schemas=db
+flyway.user=sa
+flyway.password=password
+spring.flyway.baselineOnMigrate = true
+
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.http=DEBUG
 spring.mvc.log-request-details=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 security.oauth2.client.scope=password
 
 security.jwt.signing-key=ZXUgc291IGFxdWVsZSBxdWUgc2FiZQ==
