--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 #Flyaway
 flyway.url=jdbc:postgresql://localhost:5432/
-flyway.schemas=db
-flyway.user=sa
-flyway.password=password
+flyway.schemas=postgres
+flyway.user=postgres
+flyway.password=postgres
 spring.flyway.baselineOnMigrate = true
 
 logging.level.org.springframework.web=DEBUG
